--- a/package.json
+++ b/package.json
@@ -1,13 +1,33 @@
 {
   "dependencies": {
+    "@eva-design/eva": "^2.1.1",
+    "@react-native-community/cameraroll": "^4.1.2",
+    "@react-native-community/segmented-control": "^2.2.2",
+    "@react-native-community/slider": "^4.1.12",
+    "@react-native-picker/picker": "^2.2.1",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "@types/react-native-vector-icons": "^6.4.10",
+    "@types/react-query": "^1.2.9",
+    "@ui-kitten/components": "^5.1.1",
+    "@ui-kitten/eva-icons": "^5.1.1",
     "expo": "^43.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-native": "0.64.3",
-    "react-native-web": "~0.17.1"
+    "react-native": "^0.66.3",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-pager-view": "^5.4.9",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-web": "~0.17.1",
+    "react-query": "^3.33.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "react-query-native-devtools": "^3.0.1",
+    "react-native-flipper": "^0.122.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "typescript": "~4.3.5"
