--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.1",
     "react-native": "^0.66.3",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-size": "^1.1.3",
     "react-native-pager-view": "^5.4.9",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
@@ -26,10 +27,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "react-query-native-devtools": "^3.0.1",
-    "react-native-flipper": "^0.122.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-root-import": "^6.6.0",
+    "metro-react-native-babel-preset": "^0.66.2",
+    "react-native-flipper": "^0.122.0",
+    "react-native-reanimated": "^2.2.4",
+    "react-query-native-devtools": "^3.0.1",
     "typescript": "~4.3.5"
   },
   "scripts": {
