--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@expo-google-fonts/quicksand": "^0.2.0",
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/segmented-control": "^2.2.2",
     "@react-native-community/slider": "^4.1.12",
@@ -8,21 +9,34 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-query": "^1.2.9",
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
     "expo": "^43.0.0",
+    "expo-app-loading": "^1.2.1",
+    "expo-font": "~10.0.3",
+    "expo-splash-screen": "~0.13.5",
+    "expo-updates": "~0.10.15",
     "react": "^17.0.1",
+    "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.1",
-    "react-native": "^0.66.3",
+    "react-native": "^0.64.3",
+    "react-native-animated-splash-screen": "^2.0.5",
+    "react-native-easy-content-loader": "^0.3.2",
+    "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-size": "^1.1.3",
     "react-native-pager-view": "^5.4.9",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-shared-element": "0.8.2",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-web": "~0.17.1",
+    "react-navigation-fluid-transitions": "^0.3.2",
     "react-query": "^3.33.6"
   },
   "devDependencies": {
