--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
     "@expo-google-fonts/quicksand": "^0.2.0",
+    "@freakycoder/react-native-bounceable": "^0.2.5",
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/segmented-control": "^2.2.2",
     "@react-native-community/slider": "^4.1.12",
@@ -19,19 +20,24 @@
     "expo-font": "~10.0.3",
     "expo-splash-screen": "~0.13.5",
     "expo-updates": "~0.10.15",
+    "lottie-react-native": "^5.0.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.1",
     "react-native": "^0.64.3",
+    "react-native-animated-pull-to-refresh": "^1.0.3",
     "react-native-animated-splash-screen": "^2.0.5",
     "react-native-easy-content-loader": "^0.3.2",
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-size": "^1.1.3",
     "react-native-pager-view": "^5.4.9",
+    "react-native-pull-to-refresh-custom": "^1.0.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-shared-element": "0.8.2",
+    "react-native-smooth-pull-to-refresh": "^1.1.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.0.0",
