--- a/package.json
+++ b/package.json
@@ -5,22 +5,28 @@
     "@freakycoder/react-native-bounceable": "^0.2.5",
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/segmented-control": "^2.2.2",
-    "@react-native-community/slider": "^4.1.12",
-    "@react-native-picker/picker": "^2.2.1",
+    "@react-native-community/slider": "4.1.7",
+    "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@reduxjs/toolkit": "^1.7.0",
+    "@types/axios": "^0.14.0",
     "@types/react-native-snap-carousel": "^3.8.5",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-query": "^1.2.9",
+    "@types/react-redux": "^7.1.20",
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
+    "axios": "^0.24.0",
     "expo": "^43.0.0",
     "expo-app-loading": "^1.2.1",
     "expo-font": "~10.0.3",
+    "expo-linear-gradient": "^10.0.3",
     "expo-splash-screen": "~0.13.5",
     "expo-updates": "~0.10.15",
-    "lottie-react-native": "^5.0.1",
+    "lottie-react-native": "4.0.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-content-loader": "^6.0.3",
@@ -32,7 +38,7 @@
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-size": "^1.1.3",
-    "react-native-pager-view": "^5.4.9",
+    "react-native-pager-view": "5.4.6",
     "react-native-pull-to-refresh-custom": "^1.0.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
@@ -40,10 +46,12 @@
     "react-native-smooth-pull-to-refresh": "^1.1.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "~0.17.1",
     "react-navigation-fluid-transitions": "^0.3.2",
-    "react-query": "^3.33.6"
+    "react-query": "^3.33.6",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
