--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@expo-google-fonts/quicksand": "^0.2.0",
     "@expo/webpack-config": "^0.16.12",
     "@freakycoder/react-native-bounceable": "^0.2.5",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/segmented-control": "^2.2.2",
@@ -22,17 +23,27 @@
     "@types/react-query": "^1.2.9",
     "@types/react-redux": "^7.1.20",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/redux-logger": "^3.0.9",
+    "@types/redux-persist": "^4.3.1",
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
+    "@unimodules/core": "^7.1.2",
+    "@unimodules/react-native-adapter": "^6.3.9",
     "axios": "^0.24.0",
     "babel-jest": "^27.4.4",
     "babel-preset-react-native": "^4.0.1",
     "expo": "^43.0.4",
     "expo-app-loading": "^1.2.1",
     "expo-blur": "~10.0.3",
+    "expo-constants": "~12.1.3",
     "expo-dev-client": "~0.6.3",
+    "expo-file-dl": "^2.0.0",
+    "expo-file-system": "~13.0.3",
     "expo-font": "~10.0.3",
     "expo-linear-gradient": "^10.0.3",
+    "expo-notifications": "^0.13.3",
+    "expo-permissions": "^13.0.3",
+    "expo-sharing": "~10.0.3",
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
     "expo-updates": "~0.10.15",
@@ -66,7 +77,10 @@
     "react-navigation-fluid-transitions": "^0.3.2",
     "react-navigation-shared-element": "^3.1.3",
     "react-query": "^3.34.2",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "unimodules-permissions-interface": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
