--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-native-image-size": "^1.1.3",
     "react-native-pager-view": "5.4.9",
     "react-native-pull-to-refresh-custom": "^1.0.3",
+    "react-native-reanimated": "^2.3.1",
     "react-native-renderer": "^15.5.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
@@ -90,7 +91,6 @@
     "babel-plugin-root-import": "^6.6.0",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-native-flipper": "^0.124.0",
-    "react-native-reanimated": "~2.2.0",
     "react-query-native-devtools": "^3.0.1",
     "ts-jest": "^27.1.1",
     "typescript": "~4.3.5"
