--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,16 +4,18 @@
     "module": "ES2020",
     "baseUrl": "./",
     "paths": {
-      "@/assets/*": ["src/assets/*"],
-      "@/components/*": ["src/components/*"],
-      "@/screens/*": ["src/screens/*"],
-      "@/navigator/*": ["src/navigators/*"],
-      "@/styles/*": ["src/styles/*"],
-      "@/types/*": ["src/types/*"],
-      "@/utils/*": ["src/utils/*"],
+      // "@/app/*": ["src/app/*"],
+      // "@/assets/*": ["src/assets/*"],
+      // "@/components/*": ["src/components/*"],
+      // "@/screens/*": ["src/screens/*"],
+      // "@/navigator/*": ["src/navigators/*"],
+      // "@/styles/*": ["src/styles/*"],
+      // "@/types/*": ["src/types/*"],
+      // "@/utils/*": ["src/utils/*"],
+      "@/*": ["src/*"],
     },
     "strict": true,
-    "lib": ["es6"],
+    "lib": ["es6", "ES5", "ES7"],
     "moduleResolution": "node",
     "noEmit": true,
     "target": "esnext",
@@ -21,7 +23,10 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "isolatedModules": true,
+    "types": ["node"],
   },
   "extends": "expo/tsconfig.base",
-  
+  // "include": ["./**/*"],
+  // "include": ["./src/**/*.ts"],
+  // "exclude": ["node_modules", ".vscode"]
 }
