--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@expo/webpack-config": "^0.16.12",
     "@freakycoder/react-native-bounceable": "^0.2.5",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/blur": "^3.6.0",
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/segmented-control": "^2.2.2",
@@ -18,6 +19,7 @@
     "@reduxjs/toolkit": "^1.7.0",
     "@types/axios": "^0.14.0",
     "@types/jest": "^27.0.3",
+    "@types/node": "^17.0.4",
     "@types/react-native-snap-carousel": "^3.8.5",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-query": "^1.2.9",
@@ -30,11 +32,11 @@
     "@unimodules/core": "^7.1.2",
     "@unimodules/react-native-adapter": "^6.3.9",
     "axios": "^0.24.0",
-    "babel-jest": "^27.4.4",
+    "babel-jest": "^27.4.5",
     "babel-preset-react-native": "^4.0.1",
     "expo": "^43.0.4",
     "expo-app-loading": "^1.2.1",
-    "expo-blur": "~10.0.3",
+    "expo-blur": "^8.0.0",
     "expo-constants": "~12.1.3",
     "expo-dev-client": "~0.6.3",
     "expo-file-dl": "^2.0.0",
@@ -57,7 +59,6 @@
     "react-native": "0.64.3",
     "react-native-animated-pull-to-refresh": "^1.0.3",
     "react-native-animated-splash-screen": "^2.0.5",
-    "react-native-easy-content-loader": "^0.3.2",
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-image-size": "^1.1.3",
