--- a/package.json
+++ b/package.json
@@ -1,20 +1,43 @@
 {
   "name": "comic-net-native-eas",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~44.0.0",
+    "@eva-design/eva": "^2.1.1",
+    "@ui-kitten/components": "^5.1.1",
+    "expo": "^44.0.1",
+    "expo-analytics-segment": "~11.1.0",
+    "expo-app-auth": "~11.1.0",
+    "expo-asset": "~8.4.5",
+    "expo-background-fetch": "~10.1.0",
+    "expo-battery": "~6.1.0",
+    "expo-blur": "~11.0.0",
+    "expo-constants": "~13.0.0",
+    "expo-dev-client": "~0.7.2",
+    "expo-device": "~4.1.0",
+    "expo-error-recovery": "^3.0.4",
+    "expo-font": "~10.0.4",
+    "expo-keep-awake": "~10.0.1",
+    "expo-linear-gradient": "~11.0.0",
+    "expo-linking": "~3.0.0",
+    "expo-media-library": "~14.0.0",
+    "expo-notifications": "~0.14.0",
+    "expo-screen-orientation": "^4.1.1",
+    "expo-splash-screen": "~0.14.1",
+    "expo-sqlite": "~10.1.0",
     "expo-status-bar": "~1.2.0",
+    "expo-store-review": "~5.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-svg": "12.1.1",
+    "react-native-swiper-flatlist": "^3.0.16",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
