--- a/package.json
+++ b/package.json
@@ -10,10 +10,21 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@expo-google-fonts/quicksand": "^0.2.0",
+    "@expo/webpack-config": "~0.16.2",
+    "@react-native-community/blur": "^3.6.0",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/material-top-tabs": "^6.0.6",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.0.11",
+    "@reduxjs/toolkit": "^1.7.1",
     "@ui-kitten/components": "^5.1.1",
+    "axios": "^0.24.0",
     "expo": "^44.0.1",
     "expo-analytics-segment": "~11.1.0",
     "expo-app-auth": "~11.1.0",
+    "expo-app-loading": "~1.3.0",
     "expo-asset": "~8.4.5",
     "expo-background-fetch": "~10.1.0",
     "expo-battery": "~6.1.0",
@@ -33,17 +44,39 @@
     "expo-sqlite": "~10.1.0",
     "expo-status-bar": "~1.2.0",
     "expo-store-review": "~5.1.0",
+    "i": "^0.3.7",
+    "lottie-react-native": "^5.0.1",
+    "npm": "^8.3.0",
     "react": "17.0.1",
+    "react-content-loader": "^6.1.0",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-reanimated": "^2.3.1",
     "react-native-svg": "12.1.1",
     "react-native-swiper-flatlist": "^3.0.16",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-navigation-shared-element": "^3.1.3",
+    "react-redux": "^7.2.6",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/axios": "^0.14.0",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^17.0.4",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-native-snap-carousel": "^3.8.5",
+    "@types/react-native-vector-icons": "^6.4.10",
+    "@types/react-query": "^1.2.9",
+    "@types/react-redux": "^7.1.20",
+    "@types/react-test-renderer": "^17.0.1",
+    "@types/redux-logger": "^3.0.9",
+    "@types/redux-persist": "^4.3.1",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-root-import": "^6.6.0",
+    "metro-react-native-babel-preset": "^0.66.2",
+    "ts-jest": "^27.1.1",
     "typescript": "~4.3.5"
   },
   "private": true
