--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@eva-design/eva": "^2.1.1",
     "@expo-google-fonts/quicksand": "^0.2.0",
     "@expo/webpack-config": "~0.16.2",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/blur": "^3.6.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/material-top-tabs": "^6.0.6",
@@ -20,6 +21,7 @@
     "@react-navigation/stack": "^6.0.11",
     "@reduxjs/toolkit": "^1.7.1",
     "@ui-kitten/components": "^5.1.1",
+    "@ui-kitten/eva-icons": "^5.1.1",
     "axios": "^0.24.0",
     "expo": "^44.0.1",
     "expo-analytics-segment": "~11.1.0",
@@ -51,9 +53,14 @@
     "react-content-loader": "^6.1.0",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-reanimated": "^2.3.1",
+    "react-native-gesture-handler": "^2.1.0",
+    "react-native-pager-view": "^5.4.9",
+    "react-native-reanimated": "~2.2.4",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-shared-element": "0.8.3",
     "react-native-svg": "12.1.1",
     "react-native-swiper-flatlist": "^3.0.16",
+    "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^7.2.6",
