--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,14 @@ jobs:
           expo-cache: true
 
       - name: Install dependencies
-        run: npm ci
+        run:  |
+          if [ -e yarn.lock ]; then
+          yarn install --frozen-lockfile
+          elif [ -e package-lock.json ]; then
+          npm ci
+          else
+          npm i
+          fi
 
       - name: Build on EAS
         run: npx eas-cli build --platform android --non-interactive
