--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-pager-view": "^5.4.9",
     "react-native-reanimated": "~2.2.4",
     "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.1",
     "react-native-shared-element": "0.8.3",
     "react-native-svg": "12.1.1",
     "react-native-swiper-flatlist": "^3.0.16",
