--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/blur": "^3.6.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/material-bottom-tabs": "^6.0.9",
     "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
@@ -23,16 +24,18 @@
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
     "axios": "^0.24.0",
+    "babel-polyfill": "^6.26.0",
     "expo": "^44.0.1",
     "expo-analytics-segment": "~11.1.0",
     "expo-app-auth": "~11.1.0",
     "expo-app-loading": "~1.3.0",
-    "expo-asset": "~8.4.5",
+    "expo-asset": "~8.4.6",
     "expo-background-fetch": "~10.1.0",
     "expo-battery": "~6.1.0",
     "expo-blur": "~11.0.0",
-    "expo-constants": "~13.0.0",
-    "expo-dev-client": "~0.7.2",
+    "expo-community-flipper": "^44.0.1",
+    "expo-constants": "~13.0.1",
+    "expo-dev-client": "~0.8.0",
     "expo-device": "~4.1.0",
     "expo-error-recovery": "^3.0.4",
     "expo-font": "~10.0.4",
@@ -46,26 +49,37 @@
     "expo-sqlite": "~10.1.0",
     "expo-status-bar": "~1.2.0",
     "expo-store-review": "~5.1.0",
+    "hermes-engine": "v0.7",
     "i": "^0.3.7",
     "lottie-react-native": "^5.0.1",
+    "moti": "^0.17.1",
     "npm": "^8.3.0",
     "react": "17.0.1",
     "react-content-loader": "^6.1.0",
+    "react-devtools-core": "^4.22.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-gesture-handler": "^2.1.0",
+    "react-native-animated-nav-tab-bar": "^3.1.7",
+    "react-native-flipper": "^0.129.0",
+    "react-native-gesture-handler": "^2.2.0",
     "react-native-pager-view": "^5.4.9",
-    "react-native-reanimated": "~2.2.4",
+    "react-native-paper": "^4.11.2",
+    "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-shared-element": "0.8.3",
     "react-native-svg": "12.1.1",
     "react-native-swiper-flatlist": "^3.0.16",
     "react-native-tab-view": "^3.1.1",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^7.2.6",
-    "redux-persist": "^6.0.0"
+    "realm": "^10.11.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-flipper": "^2.0.1",
+    "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
