--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "@realm/react": "^0.1.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
@@ -97,6 +98,7 @@
     "@types/redux-persist": "^4.3.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-root-import": "^6.6.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "metro-react-native-babel-preset": "^0.66.2",
     "ts-jest": "^27.1.1",
     "typescript": "~4.3.5"
