--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -71,6 +71,7 @@
     "react-native": "0.64.3",
     "react-native-flipper": "^0.131.1",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-multi-selectbox": "^1.5.0",
     "react-native-pager-view": "^5.4.9",
     "react-native-performance": "^2.1.0",
     "react-native-performance-flipper-reporter": "^2.0.0",
