--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -69,6 +69,7 @@
     "react-devtools-core": "^4.23.0",
     "react-dom": "17.0.2",
     "react-native": "0.64.3",
+    "react-native-element-dropdown": "^1.7.1",
     "react-native-flipper": "^0.131.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-multi-selectbox": "^1.5.0",
