--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -99,6 +99,7 @@
     "@types/react-native": "~0.64.12",
     "@types/react-redux": "^7.1.22",
     "@types/redux-persist": "^4.3.1",
+    "eas-cli": "^0.47.0",
     "next-compose-plugins": "^2.2.1",
     "typescript": "^4.3.4"
   },
