--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.1.3",
     "@react-native-async-storage/async-storage": "^1.15.17",
+    "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/devtools": "^6.0.5",
     "@react-navigation/material-top-tabs": "^6.1.1",
@@ -87,9 +88,11 @@
     "react-native-web": "0.17.1",
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^7.2.6",
+    "react-use": "^17.3.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-flipper": "^2.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "reselect": "^4.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
@@ -100,6 +103,7 @@
     "@types/react-native": "~0.64.12",
     "@types/react-redux": "^7.1.22",
     "@types/redux-persist": "^4.3.1",
+    "@types/reselect": "^2.2.0",
     "eas-cli": "^0.47.0",
     "next-compose-plugins": "^2.2.1",
     "typescript": "^4.3.4"
