--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -104,6 +104,7 @@
     "@types/react-redux": "^7.1.22",
     "@types/redux-persist": "^4.3.1",
     "@types/reselect": "^2.2.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eas-cli": "^0.47.0",
     "next-compose-plugins": "^2.2.1",
     "typescript": "^4.3.4"
