--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -31,6 +31,7 @@
     "build:production:android": "STAGE=production eas build --profile production --platform android"
   },
   "dependencies": {
+    "@expo-google-fonts/quicksand": "^0.2.2",
     "@gorhom/bottom-sheet": "^4.1.3",
     "@react-native-async-storage/async-storage": "^1.15.17",
     "@react-native-picker/picker": "2.1.0",
@@ -60,6 +61,7 @@
     "expo-notifications": "~0.13.3",
     "expo-splash-screen": "^0.13.4",
     "expo-status-bar": "~1.1.0",
+    "expo-task-manager": "~10.0.3",
     "expo-updates": "~0.10.13",
     "expo-vector-icons": "^10.0.1",
     "flipper-plugin-performance": "^2.0.0",
