--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@expo-google-fonts/quicksand": "^0.2.2",
     "@gorhom/bottom-sheet": "^4.1.3",
+    "@motify/interactions": "^0.17.1",
     "@react-native-async-storage/async-storage": "^1.15.17",
     "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
