--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -28,14 +28,19 @@
     "build:preview:android": "STAGE=staging eas build --profile preview --platform android",
     "build:production": "STAGE=production eas build --profile production --platform all",
     "build:production:ios": "STAGE=production eas build --profile production --platform ios",
-    "build:production:android": "STAGE=production eas build --profile production --platform android"
+    "build:production:android": "STAGE=production eas build --profile production --platform android",
+    "web": "parcel public/index.html",
+    "build": "parcel build index.web.js"
   },
   "dependencies": {
+    "@babel/helper-environment-visitor": "^7.16.7",
     "@expo-google-fonts/quicksand": "^0.2.2",
     "@gorhom/bottom-sheet": "^4.1.3",
     "@motify/interactions": "^0.17.1",
+    "@parcel/transformer-raw": "^2.3.2",
+    "@parcel/transformer-typescript-tsc": "^2.3.2",
     "@react-native-async-storage/async-storage": "^1.15.17",
-    "@react-native-picker/picker": "2.1.0",
+    "@react-native-picker/picker": "2.3.1",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/devtools": "^6.0.5",
     "@react-navigation/material-top-tabs": "^6.1.1",
@@ -46,6 +51,7 @@
     "app": "*",
     "axios": "^0.25.0",
     "dripsy": "^3.0.0",
+    "eas-cli": "^0.47.0",
     "expo": "^43.0.0",
     "expo-app-loading": "~1.2.1",
     "expo-application": "~4.0.0",
@@ -67,6 +73,7 @@
     "expo-vector-icons": "^10.0.1",
     "flipper-plugin-performance": "^2.0.0",
     "isomorphic-fetch": "^3.0.0",
+    "main": "index.js",
     "moti": "^0.17.1",
     "native-base": "^3.3.5",
     "react": "17.0.2",
@@ -95,12 +102,16 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-flipper": "^2.0.1",
     "redux-persist": "^6.0.0",
-    "reselect": "^4.1.5",
-    "eas-cli": "^0.47.0"
+    "reselect": "^4.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
     "@expo/next-adapter": "^3.1.0",
+    "@expo/webpack-config": "^0.16.19",
+    "@parcel/babel-plugin-transform-runtime": "^2.3.2",
+    "@parcel/config-default": "^2.3.2",
+    "@parcel/core": "^2.3.2",
+    "@parcel/transformer-react-refresh-wrap": "^2.3.2",
     "@types/axios": "^0.14.0",
     "@types/isomorphic-fetch": "^0.0.35",
     "@types/react": "~17.0.21",
@@ -110,9 +121,12 @@
     "@types/reselect": "^2.2.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "next-compose-plugins": "^2.2.1",
+    "parcel": "^2.3.2",
     "typescript": "^4.3.4"
   },
   "private": true,
   "version": "1.0.0",
-  "license": "MIT"
+  "license": "MIT",
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "types": "dist/index.d.ts"
 }
