--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -35,64 +35,63 @@
   "dependencies": {
     "@babel/helper-environment-visitor": "^7.16.7",
     "@expo-google-fonts/quicksand": "^0.2.2",
-    "@gorhom/bottom-sheet": "^4.1.3",
+    "@gorhom/bottom-sheet": "^4.1.5",
     "@motify/interactions": "^0.17.1",
     "@parcel/transformer-raw": "^2.3.2",
     "@parcel/transformer-typescript-tsc": "^2.3.2",
-    "@react-native-async-storage/async-storage": "^1.15.17",
+    "@react-native-async-storage/async-storage": "~1.16.1",
     "@react-native-picker/picker": "2.3.1",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/devtools": "^6.0.5",
     "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
-    "@react-navigation/native-stack": "^6.4.0",
+    "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
-    "@reduxjs/toolkit": "^1.7.1",
+    "@reduxjs/toolkit": "^1.8.0",
     "app": "*",
     "axios": "^0.25.0",
-    "dripsy": "^3.0.0",
+    "dripsy": "^3.6.0",
     "eas-cli": "^0.47.0",
-    "expo": "^43.0.0",
-    "expo-app-loading": "~1.2.1",
-    "expo-application": "~4.0.0",
-    "expo-blur": "^11.0.0",
-    "expo-constants": "^12.1.3",
+    "expo": "^44.0.6",
+    "expo-app-loading": "~1.3.0",
+    "expo-application": "~4.0.2",
+    "expo-blur": "~11.0.0",
+    "expo-constants": "~13.0.2",
     "expo-dev-client": "~0.8.4",
-    "expo-device": "~4.0.3",
-    "expo-font": "~10.0.3",
-    "expo-haptics": "~11.0.3",
-    "expo-linear-gradient": "~10.0.3",
-    "expo-linking": "~2.4.2",
-    "expo-modules-core": "~0.4.4",
+    "expo-device": "~4.1.1",
+    "expo-font": "~10.0.5",
+    "expo-haptics": "~11.1.1",
+    "expo-linear-gradient": "~11.0.3",
+    "expo-linking": "~3.0.0",
+    "expo-modules-core": "~0.6.5",
     "expo-next-react-navigation": "^2.0.2",
-    "expo-notifications": "~0.13.3",
-    "expo-splash-screen": "^0.13.4",
-    "expo-status-bar": "~1.1.0",
-    "expo-task-manager": "~10.0.3",
-    "expo-updates": "~0.10.13",
+    "expo-notifications": "~0.14.1",
+    "expo-splash-screen": "~0.14.2",
+    "expo-status-bar": "~1.2.0",
+    "expo-task-manager": "~10.1.1",
+    "expo-updates": "~0.11.6",
     "expo-vector-icons": "^10.0.1",
     "flipper-plugin-performance": "^2.0.0",
     "isomorphic-fetch": "^3.0.0",
-    "main": "index.js",
     "moti": "^0.17.1",
     "native-base": "^3.3.5",
-    "react": "17.0.2",
+    "react": "17.0.1",
     "react-devtools-core": "^4.23.0",
-    "react-dom": "17.0.2",
+    "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-element-dropdown": "^1.7.1",
     "react-native-flipper": "^0.131.1",
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-multi-selectbox": "^1.5.0",
-    "react-native-pager-view": "^5.4.9",
+    "react-native-pager-view": "5.4.9",
     "react-native-performance": "^2.1.0",
     "react-native-performance-flipper-reporter": "^2.0.0",
-    "react-native-reanimated": "~2.2.0",
+    "react-native-reanimated": "~2.3.1",
     "react-native-redash": "^16.2.3",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.8.0",
-    "react-native-shared-element": "^0.8.4",
-    "react-native-svg": "12.1.1",
+    "react-native-safe-area-context": "4.1.2",
+    "react-native-screens": "~3.13.1",
+    "react-native-shared-element": "0.8.4",
+    "react-native-svg": "12.3.0",
     "react-native-swiper-flatlist": "^3.0.16",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
@@ -105,9 +104,10 @@
     "reselect": "^4.1.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.8",
+    "@babel/core": "^7.12.9",
+    "@babel/helper-compilation-targets": "^7.16.7",
     "@expo/next-adapter": "^3.1.0",
-    "@expo/webpack-config": "^0.16.19",
+    "@expo/webpack-config": "~0.16.2",
     "@parcel/babel-plugin-transform-runtime": "^2.3.2",
     "@parcel/config-default": "^2.3.2",
     "@parcel/core": "^2.3.2",
@@ -120,9 +120,11 @@
     "@types/redux-persist": "^4.3.1",
     "@types/reselect": "^2.2.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "metro-react-native-babel-preset": "^0.69.0",
+    "metro-react-native-babel-transformer": "^0.69.0",
     "next-compose-plugins": "^2.2.1",
     "parcel": "^2.3.2",
-    "typescript": "^4.3.4"
+    "typescript": "~4.3.5"
   },
   "private": true,
   "version": "1.0.0",
