--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@babel/helper-environment-visitor": "^7.16.7",
+    "@dudigital/react-native-zoomable-view": "1.0.16",
     "@expo-google-fonts/quicksand": "^0.2.2",
     "@gorhom/bottom-sheet": "^4.1.3",
     "@motify/interactions": "^0.17.1",
@@ -76,6 +77,7 @@
     "main": "index.js",
     "moti": "^0.17.1",
     "native-base": "^3.3.5",
+    "numeral": "^2.0.6",
     "react": "17.0.2",
     "react-devtools-core": "^4.23.0",
     "react-dom": "17.0.2",
@@ -94,6 +96,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-shared-element": "^0.8.4",
+    "react-native-super-grid": "^4.2.0",
     "react-native-svg": "12.1.1",
     "react-native-swiper-flatlist": "^3.0.16",
     "react-native-tab-view": "^3.1.1",
@@ -104,7 +107,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-flipper": "^2.0.1",
     "redux-persist": "^6.0.0",
-    "reselect": "^4.1.5"
+    "reselect": "^4.1.5",
+    "date-fns": "^2.28.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
@@ -115,7 +119,9 @@
     "@parcel/core": "^2.3.2",
     "@parcel/transformer-react-refresh-wrap": "^2.3.2",
     "@types/axios": "^0.14.0",
+    "@types/date-fns": "^2.6.0",
     "@types/isomorphic-fetch": "^0.0.35",
+    "@types/numeral": "^2.0.2",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/react-redux": "^7.1.22",
