--- a/.github/workflows/eas.yml
+++ b/.github/workflows/eas.yml
@@ -35,4 +35,4 @@ jobs:
           npm i
           fi
       - name: Build on EAS
-        run: cd ./packages/expo && STAGE=staging npx eas-cli build --profile preview --platform android && STAGE=production npx eas-cli build --profile release --platform android
+        run: cd ./packages/expo && STAGE=staging npx eas-cli build --profile preview --platform android
