--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "packages/next"
   ],
   "scripts": {
-    "dev:expo": "yarn workspace @expo-next-monorepo-example/expo dev",
-    "dev:next": "yarn workspace @expo-next-monorepo-example/next dev",
+    "dev:expo": "yarn workspace @hahunavth-packages/expo dev",
+    "dev:next": "yarn workspace @hahunavth-packages/next dev",
     "build": "cd packages/next && yarn build",
     "deploy": "vercel --prod --no-clipboard",
     "postinstall": "patch-package"
