Add: new chapter notification

--- a/packages/expo/eas.json
+++ b/packages/expo/eas.json
@@ -1,6 +1,6 @@
 {
   "build": {
-    "release": {
+    "production": {
       "releaseChannel": "production",
       "env": {
         "STAGE": "production"
