--- a/.github/workflows/eas.yml
+++ b/.github/workflows/eas.yml
@@ -35,4 +35,4 @@ jobs:
           npm i
           fi
       - name: Build on EAS
-        run: cd ./packages/expo && STAGE=staging npx eas-cli build --profile preview --platform android  --non-interactive && STAGE=production eas build --profile production --platform android  --non-interactive
+        run: cd ./packages/expo && STAGE=staging npx eas-cli build --profile preview --platform android  --non-interactive && STAGE=production npx eas-cli build --profile production --platform android  --non-interactive
