--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -57,6 +57,7 @@
     "expo": "^43.0.0",
     "expo-app-loading": "~1.2.1",
     "expo-application": "~4.0.0",
+    "expo-background-fetch": "~10.0.3",
     "expo-blur": "^11.0.0",
     "expo-community-flipper": "^44.0.1",
     "expo-constants": "~12.1.3",
@@ -76,6 +77,7 @@
     "expo-vector-icons": "^10.0.1",
     "flipper-plugin-performance": "^2.0.0",
     "isomorphic-fetch": "^3.0.0",
+    "lottie-react-native": "^5.0.1",
     "main": "index.js",
     "moti": "^0.16.1",
     "native-base": "^3.3.5",
