--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -41,6 +41,7 @@
     "@parcel/transformer-raw": "^2.3.2",
     "@parcel/transformer-typescript-tsc": "^2.3.2",
     "@react-native-async-storage/async-storage": "^1.15.17",
+    "@react-native-community/netinfo": "6.0.2",
     "@react-native-picker/picker": "2.3.1",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/devtools": "^6.0.5",
@@ -88,7 +89,7 @@
     "react-native": "0.64.3",
     "react-native-awesome-gallery": "^0.2.6",
     "react-native-element-dropdown": "^1.7.1",
-    "react-native-flipper": "^0.131.1",
+    "react-native-flipper": "^0.138.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-image-viewing": "^0.2.1",
     "react-native-multi-selectbox": "^1.5.0",
@@ -112,6 +113,7 @@
     "redux-flipper": "^2.0.1",
     "redux-persist": "^6.0.0",
     "reselect": "^4.1.5",
+    "reselect-debugger-flipper": "^1.1.2",
     "sentry-expo": "^4.0.0"
   },
   "devDependencies": {
