--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -56,6 +56,7 @@
     "date-fns": "^2.28.0",
     "dripsy": "^3.0.0",
     "expo": "^43.0.0",
+    "expo-ads-admob": "~11.0.3",
     "expo-app-loading": "~1.2.1",
     "expo-application": "~4.0.0",
     "expo-background-fetch": "~10.0.3",
