--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -2,8 +2,10 @@
   "name": "app",
   "version": "1.0.0",
   "scripts": {},
+  "main": "index.ts",
   "license": "MIT",
   "dependencies": {
     "native-base": "^3.3.4"
-  }
+  },
+  "sideEffects": false
 }
