--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "expo-next-monorepo-example",
+  "name": "onigiri",
   "private": true,
   "license": "MIT",
   "devDependencies": {
-    "patch-package": "^6.4.7"
+    "patch-package": "^6.4.7",
+    "@types/react": "^17.0.39",
+    "@types/react-native": "^0.67.2",
+    "eslint": "^8.11.0",
+    "turbo": "^1.1.6",
+    "typescript": "^4.6.2"
   },
   "workspaces": [
     "packages/app",
