--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -40,9 +40,9 @@
     "@motify/interactions": "^0.17.1",
     "@parcel/transformer-raw": "^2.3.2",
     "@parcel/transformer-typescript-tsc": "^2.3.2",
-    "@react-native-async-storage/async-storage": "^1.15.17",
-    "@react-native-community/netinfo": "6.0.2",
-    "@react-native-picker/picker": "2.3.1",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/netinfo": "7.1.3",
+    "@react-native-picker/picker": "2.2.1",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/devtools": "^6.0.5",
     "@react-navigation/material-top-tabs": "^6.1.1",
@@ -55,55 +55,55 @@
     "axios": "^0.25.0",
     "date-fns": "^2.28.0",
     "dripsy": "^3.0.0",
-    "expo": "^43.0.0",
-    "expo-ads-admob": "~11.0.3",
-    "expo-app-loading": "~1.2.1",
-    "expo-application": "~4.0.0",
-    "expo-background-fetch": "~10.0.3",
-    "expo-blur": "^11.0.0",
+    "expo": "^44.0.0",
+    "expo-ads-admob": "~12.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-application": "~4.0.1",
+    "expo-background-fetch": "~10.1.0",
+    "expo-blur": "~11.0.0",
     "expo-community-flipper": "^44.0.1",
-    "expo-constants": "~12.1.3",
+    "expo-constants": "~13.0.1",
     "expo-dev-client": "~0.8.4",
-    "expo-device": "~4.0.3",
-    "expo-font": "~10.0.3",
-    "expo-haptics": "~11.0.3",
-    "expo-linear-gradient": "~10.0.3",
-    "expo-linking": "~2.4.2",
-    "expo-localization": "~11.0.0",
-    "expo-modules-core": "~0.4.4",
+    "expo-device": "~4.1.0",
+    "expo-font": "~10.0.4",
+    "expo-haptics": "~11.1.0",
+    "expo-linear-gradient": "~11.0.3",
+    "expo-linking": "~3.0.0",
+    "expo-localization": "~12.0.0",
+    "expo-modules-core": "~0.6.4",
     "expo-next-react-navigation": "^2.0.2",
-    "expo-notifications": "~0.13.3",
-    "expo-splash-screen": "^0.13.4",
-    "expo-status-bar": "~1.1.0",
-    "expo-task-manager": "~10.0.3",
-    "expo-updates": "~0.10.13",
+    "expo-notifications": "~0.14.0",
+    "expo-splash-screen": "~0.14.1",
+    "expo-status-bar": "~1.2.0",
+    "expo-task-manager": "~10.1.0",
+    "expo-updates": "~0.11.6",
     "expo-vector-icons": "^10.0.1",
     "flipper-plugin-performance": "^2.0.0",
     "i18n-js": "^3.8.0",
     "isomorphic-fetch": "^3.0.0",
-    "lottie-react-native": "^5.0.1",
+    "lottie-react-native": "5.0.1",
     "main": "index.js",
     "moti": "^0.16.1",
     "native-base": "^3.3.5",
     "numeral": "^2.0.6",
-    "react": "17.0.2",
+    "react": "17.0.1",
     "react-devtools-core": "^4.23.0",
-    "react-dom": "17.0.2",
+    "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-awesome-gallery": "^0.2.6",
     "react-native-element-dropdown": "^1.7.1",
     "react-native-flipper": "^0.138.0",
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-image-viewing": "^0.2.1",
     "react-native-multi-selectbox": "^1.5.0",
-    "react-native-pager-view": "^5.4.9",
+    "react-native-pager-view": "5.4.9",
     "react-native-performance": "^2.1.0",
     "react-native-performance-flipper-reporter": "^2.0.0",
-    "react-native-reanimated": "~2.2.0",
+    "react-native-reanimated": "~2.3.1",
     "react-native-redash": "^16.2.3",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.8.0",
-    "react-native-shared-element": "^0.8.4",
+    "react-native-screens": "~3.10.1",
+    "react-native-shared-element": "0.8.3",
     "react-native-super-grid": "^4.2.0",
     "react-native-svg": "12.1.1",
     "react-native-swiper-flatlist": "^3.0.16",
@@ -117,12 +117,13 @@
     "redux-persist": "^6.0.0",
     "reselect": "^4.1.5",
     "reselect-debugger-flipper": "^1.1.2",
-    "sentry-expo": "^4.0.0"
+    "sentry-expo": "^4.0.0",
+    "metro-minify-esbuild": "^0.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.8",
+    "@babel/core": "^7.12.9",
     "@expo/next-adapter": "^3.1.0",
-    "@expo/webpack-config": "^0.16.19",
+    "@expo/webpack-config": "~0.16.2",
     "@parcel/babel-plugin-transform-runtime": "^2.3.2",
     "@parcel/config-default": "^2.3.2",
     "@parcel/core": "^2.3.2",
@@ -141,7 +142,7 @@
     "eas-cli": "^0.47.0",
     "next-compose-plugins": "^2.2.1",
     "parcel": "^2.3.2",
-    "typescript": "^4.3.4"
+    "typescript": "~4.3.5"
   },
   "private": true,
   "version": "1.0.0",
