--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -1,24 +1,32 @@
 {
   "name": "@hahunavth-packages/next",
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
     "analyze": "ANALYZE=true yarn build",
     "deploy": "yarn --cwd ../../ deploy",
-    "postinstall": "cd ../.. && yarn patch-package"
+    "postinstall": "cd ../.. && yarn patch-package",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@next/bundle-analyzer": "^11.1.2",
+    "@expo/next-adapter": "^3.1.20",
     "app": "*",
     "native-base": "^3.3.4",
-    "next": "^12.0.0",
+    "next": "^12.1.0",
     "next-fonts": "^1.5.1",
     "next-images": "^1.8.1",
-    "next-transpile-modules": "^8.0.0",
     "raf": "^3.4.1",
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.38.0",
     "setimmediate": "^1.0.5"
+  },
+  "devDependencies": {
+    "next-compose-plugins": "^2.2.1",
+    "next-transpile-modules": "^9.0.0",
+    "@types/node": "17.0.21",
+    "eslint-config-next": "^12.1.0"
   },
   "private": true,
   "version": "1.0.0",
