Web: bottom nav style

--- a/packages/expo/.env.example
+++ b/packages/expo/.env.example
@@ -1,2 +1,11 @@
 STAGE=development
 SENTRY_DSN=https...
+
+
+# adUnitId
+ANDROID_ADMOD_BANNER_TEST=...
+ANDROID_ADMOD_INTERSTITIAL_TEST=...
+
+ANDROID_ADMOD_BANNER=...
+ANDROID_ADMOD_INTERSTITIAL=...
+
