Add: Chapter List screen

--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -82,6 +82,7 @@
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "expo-task-manager": "~10.1.0",
+    "expo-updates": "~0.11.6",
     "expo-vector-icons": "^10.0.1",
     "fast-html-parser": "^1.0.1",
     "flipper-plugin-performance": "^2.0.0",
@@ -113,6 +114,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-shadow-2": "^6.0.3",
     "react-native-shared-element": "0.8.3",
     "react-native-super-grid": "^4.2.0",
     "react-native-svg": "12.1.1",
