--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -83,6 +83,7 @@
     "expo-notifications": "~0.14.0",
     "expo-random": "~12.1.1",
     "expo-screen-orientation": "~4.1.1",
+    "expo-sharing": "~10.1.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "expo-task-manager": "~10.1.0",
