Change: bigger navbar

--- a/packages/expo/.env.example
+++ b/packages/expo/.env.example
@@ -1,5 +1,5 @@
 STAGE=development
-SENTRY_DSN=https...
+SENTRY_DSN=https://b317d8e257dc46158832ef2b7567670d@o1168335.ingest.sentry.io/6260193
 
 
 # adUnitId
@@ -15,7 +15,7 @@ MMKV=true
 FAST_IMAGE=true
 
 # OAuth
-OAUTH_TOKEN_WEB_DEV=
+OAUTH_TOKEN_WEB_DEV=30060461713-n4h7b7dnj6jsu43gkcb69cr95e29a0kh.apps.googleusercontent.com
 OAUTH_TOKEN_WEB_STG=
 OAUTH_TOKEN_WEB_PRO=
 
