--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -42,7 +42,7 @@
     "@parcel/transformer-typescript-tsc": "^2.3.2",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/netinfo": "7.1.3",
-    "@react-native-masked-view/masked-view": "^0.2.6",
+    "@react-native-masked-view/masked-view": "0.2.6",
     "@react-native-picker/picker": "2.2.1",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/devtools": "^6.0.5",
@@ -50,7 +50,7 @@
     "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.4.0",
-    "@react-navigation/stack": "^6.1.1",
+    "@react-navigation/stack": "^6.2.1",
     "@reduxjs/toolkit": "^1.7.1",
     "@sentry/react-native": "^3.2.13",
     "@stream-io/flat-list-mvcp": "^0.10.1",
